tests/ui/temporary-value.stderr
error[E0716]: temporary value dropped while borrowed
 --> tests/ui/temporary-value.rs:4:22
  |
4 |     let _ = anyhow!(&String::new());
  |             ---------^^^^^^^^^^^^^-
  |             |        |
  |             |        creates a temporary value which is freed while still